--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,20 +56,36 @@ jobs:
       with:
         python-version: '3.9'
         
-    - name: Install dependencies
+    - name: Install build dependencies
       run: |
+        python -m pip install --upgrade pip
+        pip install wheel setuptools
         pip install -r requirements.txt
         
-    - name: Create setup.py for build
+    - name: Create proper setup.py
       run: |
-        cat > setup.py << EOF
+        cat > setup.py << 'EOF'
         from setuptools import setup, find_packages
+        
+        with open("README.md", "r", encoding="utf-8") as fh:
+            long_description = fh.read()
         
         setup(
             name="my-calculator",
             version="0.1.0",
+            author="Your Name",
+            author_email="your.email@example.com",
+            description="A simple calculator package",
+            long_description=long_description,
+            long_description_content_type="text/markdown",
             packages=find_packages(where="src"),
             package_dir={"": "src"},
+            classifiers=[
+                "Programming Language :: Python :: 3",
+                "License :: OSI Approved :: MIT License",
+                "Operating System :: OS Independent",
+            ],
+            python_requires=">=3.8",
         )
         EOF
         
