--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -135,117 +135,96 @@ jobs:
 
         
   auto-merge:
-    name: Enable Auto-merge for PR
+    name: "Auto-merge: Enable for PR"
     runs-on: ubuntu-latest
-    needs: [test, build, lint]  # Все ключевые проверки должны пройти
+    # Зависим только от критических проверок
+    needs: [test, build, lint]
     
-    # Условия запуска:
-    # - Только для Pull Request
-    # - Только в основную ветку (main)
-    # - Только из веток development или release/*
+    # Упрощенные условия - запускаем для любого PR в main
     if: |
       github.event_name == 'pull_request' && 
-      github.base_ref == 'refs/heads/main' &&
-      (contains(github.head_ref, 'development') || contains(github.head_ref, 'release/'))
+      github.base_ref == 'refs/heads/main'
     
-    # Расширенные permissions для управления PR
     permissions:
       pull-requests: write
       contents: write
       checks: read
       
     steps:
-      - name: Check PR mergeability status
+      - name: Wait for status checks
+        run: |
+          echo "Ожидание завершения всех статус-проверок..."
+          sleep 30
+          
+      - name: Get PR details
+        id: pr-info
         uses: actions/github-script@v6
-        id: check-mergeable
         with:
           script: |
-            // Ждем пока все статус-чеки завершатся
-            await new Promise(resolve => setTimeout(resolve, 10000));
-            
             const { data: pr } = await github.rest.pulls.get({
               owner: context.repo.owner,
               repo: context.repo.repo,
               pull_number: context.issue.number
             });
             
-            console.log(`PR state: ${pr.state}`);
-            console.log(`Mergeable: ${pr.mergeable}`);
-            console.log(`Mergeable state: ${pr.mergeable_state}`);
-            
-            // Проверяем, можно ли мержить PR
-            if (pr.mergeable && pr.state === 'open') {
-              console.log('✅ PR is ready for auto-merge');
-              return 'ready';
-            } else {
-              console.log('❌ PR cannot be merged automatically');
-              console.log(`Reason: mergeable=${pr.mergeable}, state=${pr.state}`);
-              return 'not-ready';
-            }
-          result-encoding: string
-    
-      - name: Enable auto-merge for PR
-        if: steps.check-mergeable.outputs.result == 'ready'
+            return {
+              mergeable: pr.mergeable,
+              state: pr.state,
+              title: pr.title,
+              head_ref: pr.head.ref,
+              base_ref: pr.base.ref
+            };
+          result-encoding: json
+          
+      - name: Debug PR info
+        run: |
+          echo "PR State: ${{ fromJson(steps.pr-info.outputs.result).state }}"
+          echo "Mergeable: ${{ fromJson(steps.pr-info.outputs.result).mergeable }}"
+          echo "Head Ref: ${{ fromJson(steps.pr-info.outputs.result).head_ref }}"
+          echo "Base Ref: ${{ fromJson(steps.pr-info.outputs.result).base_ref }}"
+          
+      - name: Enable Auto-merge (если PR можно мержить)
+        if: |
+          fromJson(steps.pr-info.outputs.result).state == 'open' &&
+          fromJson(steps.pr-info.outputs.result).mergeable == true
         uses: actions/github-script@v6
         with:
           script: |
             try {
-              const result = await github.rest.pulls.enableAutomerge({
+              await github.rest.pulls.enableAutomerge({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 pull_number: context.issue.number,
-                merge_method: 'squash'  // Можно изменить на 'merge' или 'rebase'
+                merge_method: 'squash'
               });
               
-              console.log('✅ Auto-merge successfully enabled');
-              console.log('PR will be automatically merged when all requirements are satisfied');
+              console.log('✅ Auto-merge успешно активирован!');
               
-              // Создаем комментарий в PR для уведомления
+              // Добавляем комментарий в PR
               await github.rest.issues.createComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: context.issue.number,
-                body: '✅ Все проверки пройдены! Auto-merge активирован. PR будет автоматически слит после удовлетворения всех требований.'
+                body: '🎉 Все проверки пройдены! Auto-merge активирован. PR будет автоматически слит в основную ветку.'
               });
               
             } catch (error) {
-              console.log('⚠️ Could not enable auto-merge:', error.message);
+              console.log('❌ Ошибка при активации auto-merge:', error.message);
               
-              // Создаем комментарий с ошибкой
               await github.rest.issues.createComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: context.issue.number,
-                body: `❌ Не удалось активировать auto-merge: ${error.message}. Проверьте настройки защиты ветки.`
+                body: `⚠️ Auto-merge не удалось активировать: ${error.message}. Проверьте настройки защиты ветки.`
               });
             }
-    
-      - name: Check final merge status
-        if: steps.check-mergeable.outputs.result == 'ready'
+            
+      - name: Skip auto-merge (если PR нельзя мержить)
+        if: |
+          fromJson(steps.pr-info.outputs.result).state != 'open' ||
+          fromJson(steps.pr-info.outputs.result).mergeable != true
         run: |
-          echo "Auto-merge активирован для PR #${{ github.event.pull_request.number }}"
-          echo "PR будет автоматически слит после выполнения всех требований"
-          echo "Ветка: ${{ github.head_ref }} -> ${{ github.base_ref }}"
-
-  # ДОПОЛНИТЕЛЬНАЯ ПРОВЕРКА СЛИЯНИЯ
-  verify-merge:
-    name: Verify Merge Status
-    runs-on: ubuntu-latest
-    needs: [test, build, lint, auto-merge]
-    
-    if: github.event_name == 'pull_request' && github.base_ref == 'refs/heads/main'
-    
-    permissions:
-      pull-requests: read
-      contents: read
-      
-    steps:
-      - name: Verify all checks passed
-        run: |
-          echo "✅ Все необходимые проверки успешно завершены:"
-          echo "   - Тесты: PASSED"
-          echo "   - Сборка: PASSED" 
-          echo "   - Линтинг: PASSED"
-          echo "   - Auto-merge: CONFIGURED"
-          echo ""
-          echo "PR готов к автоматическому слиянию!"
+          echo "❌ PR нельзя автоматически смержить"
+          echo "State: ${{ fromJson(steps.pr-info.outputs.result).state }}"
+          echo "Mergeable: ${{ fromJson(steps.pr-info.outputs.result).mergeable }}"
+          echo "Auto-merge пропущен"
